--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <!-- navigation -->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        
+        <h1>
+            Hori<span class="seo">seo</span>n
+        </h1>
         <nav>
             <ul>
                 <li>
@@ -27,8 +28,9 @@
             </ul>
         </nav>
     </header>
+    <!-- hero: an image that fits the company's vision -->
+    <section class="hero"></section>
     
-    <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
