--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
     <!-- hero: an image that fits the company's vision -->
     <section class="hero"></section>
     
-    <div class="content">
+    <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -53,7 +53,8 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
+    
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -77,12 +78,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
