--- a/Develop/index.html
+++ b/Develop/index.html
@@ -55,7 +55,7 @@
         </article>
     </section>
     
-    <aside class="benefits">
+    <section class="benefits">
         <div class="benefit lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -77,7 +77,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </aside>
+    </section>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
