--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <section class="hero"></section>
     
     <section class="content">
-        <article class="search-engine-optimization">
+        <!-- added id in order to make the anchor tag above work -->
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
