prettier extension was weirdly aligning my html so i had to turn it off and fix it

--- a/index.html
+++ b/index.html
@@ -11,36 +11,27 @@
     <!-- navigation -->
     <header>
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="#search-engine-optimization">Search Engine Optimization</a>
-          </li>
-          <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
-          </li>
-          <li>
-            <a href="#social-media-marketing">Social Media Marketing</a>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <!-- hero: an image that fits the company's vision -->
     <section class="hero"></section>
 
     <section class="content">
       <!-- added id in order to make the anchor tag above work -->
-      <article
-        id="search-engine-optimization"
-        class="search-engine-optimization"
-      >
-        <img
-          src="./assets/images/search-engine-optimization.jpg"
-          alt="SEO brainstorm on a notebook which is placed on a table next to a laptop, a cup of coffee, and multiple pens"
-          class="float-left"
-        />
+      <article id="search-engine-optimization" class="search-engine-optimization">
+        <img src="./assets/images/search-engine-optimization.jpg" alt="SEO brainstorm on a notebook which is placed on a table next to a laptop, a cup of coffee, and multiple pens" class="float-left" />
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -49,15 +40,8 @@
           visibility and find the right customers for your business.
         </p>
       </article>
-      <article
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
-        <img
-          src="./assets/images/online-reputation-management.jpg"
-          alt="A person in front of a laptop that displays a positive growth bar graph and other graphs"
-          class="float-right"
-        />
+      <article id="online-reputation-management" class="online-reputation-management">
+        <img src="./assets/images/online-reputation-management.jpg" alt="A person in front of a laptop that displays a positive growth bar graph and other graphs" class="float-right" />
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -68,11 +52,7 @@
         </p>
       </article>
       <article id="social-media-marketing" class="social-media-marketing">
-        <img
-          src="./assets/images/social-media-marketing.jpg"
-          alt="A team meeting around a table that has various social media company logos"
-          class="float-left"
-        />
+        <img src="./assets/images/social-media-marketing.jpg" alt="A team meeting around a table that has various social media company logos" class="float-left" />
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
